    - relocated manual page data to clive.pod
  * Removed --manual option
  * Obsoleted "play" and "rencode" config keys in "commands" section
  * Added --exec option which resembles cclive's --exec command
  * Removed --play, --noplay, --rencode and --norencode options
  * Changed --paste short option from 'x' to 'p'
  * Removed wmv format (breakcom)
    - persistant HTTP/404 (not found) error


Version 2.1.5
(February 6, 2009)

 User-visible changes:
  * Fixed sevenload support


Version 2.1.4
(February 1, 2009)

 User-visible changes:
  * Fixed Youtube login which sometimes reported failed attempts as OK
    - Youtube defaults web interface language based on users ip
    - clive looks for English words in the post-login page to confirm login
  * Tweaked --version output

 Developer-visible changes:
  * Removed metacafe remnants
  * Fixed bug in time2str subroutine which caused incorrect calculations
  * Updated INSTALL
  * removed genman script (obsoleted by "make man")
  * Added a rudimentary (GNU) Makefile
  * Cleaned up translate_embed subroutine

 Other changes:
  * Removed the clive-announce and clive-users mailing lists
    - New release announcements will be posted via Freshmeat alone from now on
    - Subscribe to the project at http://freshmeat.net/projects/clive
  * Created the clive-list@googlegroups.com mailing-list
    - For support questions, patches and bug reports
    - Issue tracker will remain for tracking bugs
    - Send an email to clive-list-subscribe@googlegroups.com to subscribe


Version 2.1.3
(January 9, 2009)

 User-visible changes:
  * Documented missing "%t" (--filename-format) in manual page
  * Tweaked "localfile_length == remotefile_length" message
  * Renamed CLIVE_CONFIGDIR environment variable to CLIVE_HOME

 Developer-visible changes:
  * Cleaned up manual page
  * Added LICENSE file
  * Cleaned up FreeBSD details (INSTALL)


Version 2.1.2
(December 29, 2008)

 User-visible changes: